--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -78,7 +78,8 @@ Suggests:
     rmarkdown,
     rstan,
     survival,
-    testthat
+    testthat,
+    dbarts
 Description: Multiple imputation using Fully Conditional Specification (FCS)
     implemented by the MICE algorithm as described in Van Buuren and
     Groothuis-Oudshoorn (2011) <doi:10.18637/jss.v045.i03>. Each variable has
