Deleting redundant code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,6 +109,7 @@ export(mice.impute.2l.pan)
 export(mice.impute.2lonly.mean)
 export(mice.impute.2lonly.norm)
 export(mice.impute.2lonly.pmm)
+export(mice.impute.bart)
 export(mice.impute.cart)
 export(mice.impute.jomoImpute)
 export(mice.impute.lasso.logreg)
@@ -118,6 +119,7 @@ export(mice.impute.lasso.select.norm)
 export(mice.impute.lda)
 export(mice.impute.logreg)
 export(mice.impute.logreg.boot)
+export(mice.impute.mbart)
 export(mice.impute.mean)
 export(mice.impute.midastouch)
 export(mice.impute.mnar.logreg)
