--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -79,7 +79,8 @@ Suggests:
     rstan,
     survival,
     testthat,
-    dbarts
+    dbarts,
+    stan4bart
 Description: Multiple imputation using Fully Conditional Specification (FCS)
     implemented by the MICE algorithm as described in Van Buuren and
     Groothuis-Oudshoorn (2011) <doi:10.18637/jss.v045.i03>. Each variable has
