--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(md.pairs)
 export(md.pattern)
 export(mdc)
 export(mice)
+export(mice.impute.2l.bart)
 export(mice.impute.2l.bin)
 export(mice.impute.2l.lmer)
 export(mice.impute.2l.norm)
