Adding file with imputation through the rbart_vi function in the dbarts package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ export(mice.impute.2l.bin)
 export(mice.impute.2l.lmer)
 export(mice.impute.2l.norm)
 export(mice.impute.2l.pan)
+export(mice.impute.2l.rbart)
 export(mice.impute.2lonly.mean)
 export(mice.impute.2lonly.norm)
 export(mice.impute.2lonly.pmm)
